--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@ classes: wide
     <!-- <link rel="preload" as="style" href="https://https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Nanum+Myeongjo&family=Noto+Sans+KR:wght@100&family=Orbit&family=Stylish&display=swap"> -->
     <!-- <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap"> -->
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Coming+Soon&family=Nanum+Gothic+Coding&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Gowun+Dodum&family=Nanum+Myeongjo&family=Noto+Sans+KR:wght@100&family=Orbit&family=Stylish&display=swap">
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Coming+Soon&family=Nanum+Gothic+Coding&display=swap"> -->
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Gowun+Dodum&family=Nanum+Myeongjo&family=Noto+Sans+KR:wght@100&family=Orbit&family=Stylish&display=swap"> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Coming+Soon&family=Nanum+Gothic+Coding&display=swap">
     
     <!--폰트 : "Iropke Batang"-->
     <link rel="preload" as="style" href="https://cdn.jsdelivr.net/font-iropke-batang/1.2/font-iropke-batang.css">
