--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -65,7 +65,7 @@ classes: wide
         <p></p>
 
         <!-- archive 중간 광고 -->
-        <ins class="adsbygoogle"
+        <!-- <ins class="adsbygoogle"
              style="display:block"
             data-ad-client="ca-pub-6111782407607310"
             data-ad-slot="5458515780"
@@ -73,7 +73,7 @@ classes: wide
             data-full-width-responsive="true"></ins>
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+        </script> -->
       </section>
       <footer class="page__meta">
         {% if site.data.ui-text[site.locale].meta_label %}
