--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,13 +9,10 @@ classes: wide
   Free for personal and commercial use under the MIT license
   https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE
 -->
-<html lang="{{ site.locale | slice: 0,2 | default: "en" }}" class="no-js">
+<html lang="{{ site.locale | slice: 0,2 | default: 'en' }}" class="no-js">
   <head>
     <!--폰트 : "Nanum Gothic Coding", "Coming Soon"-->
-    <!-- <link rel="preload" as="style" href="https://https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Nanum+Myeongjo&family=Noto+Sans+KR:wght@100&family=Orbit&family=Stylish&display=swap"> -->
-    <!-- <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap"> -->
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Coming+Soon&family=Nanum+Gothic+Coding&display=swap">
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Gowun+Dodum&family=Nanum+Myeongjo&family=Noto+Sans+KR:wght@100&family=Orbit&family=Stylish&display=swap"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Coming+Soon&family=Nanum+Gothic+Coding&display=swap">
     
     <!--폰트 : "Iropke Batang"-->
@@ -34,11 +31,11 @@ classes: wide
       ::-webkit-scrollbar{width: 16px;}
       ::-webkit-scrollbar-track {background-color:#4b4f52; border-radius: 16px;}
       ::-webkit-scrollbar-thumb {background-color:#5e6265; border-radius: 16px;}
-      ::-webkit-scrollbar-thumb:hover {background: #2e63f3;}
+      ::-webkit-scrollbar-thumb:hover {background: #138ff5;}
       /* ::-webkit-scrollbar-thumb:hover {background: #ffd24c;} */
       ::-webkit-scrollbar-button:start:decrement,::-webkit-scrollbar-button:end:increment 
       {
-          width:12px;height:12px;background:transparent;}
+          width:12px;height:12px;background:transparent;
       }  
 
       
